# django-letsencrypt

./: .flake8  .gitignore  .python-version  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  migrations.py  pyproject.toml  requirements-travis.txt  requirements.txt  runtests.py  setup.py  tox.ini
.github/: codecov.yml
.github/workflows/: linting.yaml  package-building.yaml  pull-request-test.yaml  testing-22.yaml  testing-32.yaml  testing-40.yaml  testing-42.yaml  testing-50.yaml  testing-51.yaml  testing-52.yaml  testing-60.yaml  testing.yaml
example_project/: Makefile  README.md  create_example_data.py  create_superuser.py  letsencrypt  requirements.txt
example_project/example_project/: __init__.py  settings.py  settings_test.py  urls.py  views.py
example_project/templates/example_project/: index.html
letsencrypt/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
letsencrypt/migrations/: 0001_initial.py  0001_squashed_0004_squash_for_mysql_support.py  0002_create_model_move_data.py  0002_remove_challenge_duplicates.py  0003_make_challenge_unique.py  0004_text_to_char__remove_ts_fields.py  0004_textfield_to_charfield.py  __init__.py
scripts/: local_integration.sh  testpypi_integration.sh  version_manager.py
tests/integration/: test_integration_local_server.py
